@@ -1,4 +1,4 @@
-"id" 11.33989255 9.834555926 10.35132661 3.156813934 9.376172431 16.26496201 12.10591046 9.49830532 27.06531915 11.060935 12.39269089 16.8920197 11.94203099 8.526954647 18.2009425 29.88458526 0.046267667 0.052838316 0.015322959 0.033893772 0.032237858 0.015322959 0.021631009 0.038747816 0.020510136 0.04320519 0.027253943 0.024840968 0.04866112 19.13579772 20.69962533 20.6200262 36.28023149 9.160618686 21.12847215 13.50774672 23.6875146 28.0533238 18.27957213 24.1489448 14.80496667 23.03483963 2.089098317 4.917158313 3.604418892 3.250996396 3.482983774 2.473742889 3.323453475 2.892012242 4.483773107 4.924107235 5.50873197 2.903848381 2.8991768 3.008024729 3.199518516 0.072651884 0.072651884 0.11199799 0.072651884 0.112188035 0.166950433 0.101043254 0.00295264 0.00295264 0.00295264 0.00295264 0.009908569 0.006719404 0.006089285 0.00295264 0.00295264 0.00085348 0.00085348 0.00085348 0.00085348 0.00085348 0.00085348 0.00085348 0.00085348 0.004045058 0.004045058 0.004045058 0.004045058 0.004045058 0.004045058
+"id" 11.33989 9.83456 10.35133 3.15681 9.37617 16.26496 12.10591 9.49831 27.06532 11.06094 12.39269 16.89202 11.94203 8.52695 18.20094 29.88459 0.04627 0.05284 0.01532 0.03389 0.03224 0.01532 0.02163 0.03875 0.02051 0.04321 0.02725 0.02484 0.04866 19.1358 20.69963 20.62003 36.28023 9.16062 21.12847 13.50775 23.68751 28.05332 18.27957 24.14894 14.80497 23.03484 2.0891 4.91716 3.60442 3.251 3.48298 2.47374 3.32345 2.89201 4.48377 4.92411 5.50873 2.90385 2.89918 3.00802 3.19952 0.07265 0.07265 0.112 0.07265 0.11219 0.16695 0.10104 0.00295 0.00295 0.00295 0.00295 0.00991 0.00672 0.00609 0.00295 0.00295 0.00085 0.00085 0.00085 0.00085 0.00085 0.00085 0.00085 0.00085 0.00405 0.00405 0.00405 0.00405 0.00405 0.00405
 "N00000000001_c0_g1" 251068 348926 226874 193443 138454 156774 179469 245588 293172 226637 259178 200072 13083 125774 450106 78199 177427 166707 149922 173597 144749 183551 167746 113025 172172 77607 190493 152792 254774 176456 218247 77257 101149 480481 202591 166089 189206 177192 224018 117635 170395 194509 108277 136882 98818 95266 182470 113418 97576 139078 75590 118614 189515 130879 136141 116404 139562 151948 80940 110259 104054 197300 206222 106153 394970 180161 174587 142929 122533 190262 392943 242834 136512 106843 200374 123445 125501 157034 188126 134734 136471 111948 279243 231457 218001 150149 139145
 "N00000000002_c0_g1" 992853 1513709 929270 724299 598823 754264 952585 923244 1200616 964045 1075196 902463 201276 693104 1882696 547129 1129477 1178822 1043048 1135975 1011244 1105353 1239120 948937 1009431 682172 1099190 1102227 1272680 1246350 968272 680354 867896 3221720 998610 1054421 985780 1153324 1087570 911655 1039722 926002 598159 772247 406723 438731 776328 557772 798814 721049 447381 963074 962997 536522 662993 726015 520156 928432 738111 699233 795556 1135749 734990 587983 1291428 1278566 870075 1105328 926090 1095816 1374489 1287499 993449 671010 1051825 764152 588706 1040768 792422 1041421 872818 750678 2256857 1429602 961556 1206195 776502
 "N00000000003_c0_g1" 18370 19322 16266 13643 11164 11578 14694 16932 31274 11666 13684 13811 954 9643 34105 5744 8756 10214 11438 9396 10598 9878 10548 7184 11986 3804 9924 7870 13488 13284 14228 4912 5352 41832 15540 11560 9999 10102 9610 7867 10771 13068 6510 9871 5446 6116 11426 4718 6666 6984 5746 8580 13243 6842 7166 9706 7435 10544 6292 8898 7110 13198 8512 6822 9368 9357 11656 10022 6149 13747 17736 16999 6156 9596 13070 11512 9496 14050 14548 12720 10558 7728 25957 13590 12144 13659 9388
