@@ -1,6 +1,6 @@
 ---
 title: Overview of the DRomics package
-author: Marie Laure Delignette Muller, Elise Billoir, Floriane Larras
+author: Marie Laure Delignette-Muller, Elise Billoir, Floriane Larras
 date: '`r Sys.Date()`'
 output:
   html_vignette:
@@ -92,7 +92,8 @@ workflow**.
 formatdata4DRomics() needs two arguments, 
 the matrix of the data with one row for each item and one column for each sample, 
 and the numeric vector coding for the dose for each sample. The names of the samples
-can be added in a third optional argument. Below is an example
+can be added in a third optional argument (see ?formatdata4DRomics for details). 
+Below is an example
 using a RNAseq dataset of the package coded as an R object named zebraf. 
 
 ```{r}
@@ -115,7 +116,7 @@ head(data4DRomics)
 ### Types of data that may be imported in DRomics
 
 DRomics offers the possibility to work on different types of omics
-data (see next paragraph for their description) 
+data (see following subsections for their description) 
 but also on continuous anchoring data.
 **When working on omics data, all the lines of the dataframe**
 (except the first one coding for the doses or concentrations)
@@ -152,8 +153,10 @@ For RNAseq data, imperatively imported in raw counts, you have to choose the tra
 method used to stabilize the variance 
 ("rlog" or "vst"). In the example below "vst" was used 
 only to make this vignette quick to compile, 
-but **"rlog" is strongly recommended and chosen by default even if more computer intensive than "vst"** 
-(see ?RNAseqdata for details). Whatever the chosen method, 
+but **"rlog" is recommended and chosen by default even if more computer intensive than "vst"**
+except when the number of samples is very large (> 30) as encountered for in situ data for example
+(see ?RNAseqdata and following section dedicated to in situ data for details). 
+Whatever the chosen method, 
 data are automatically normalized with respect to library size and transformed in a log2 scale.
 
 
@@ -232,6 +235,85 @@ plot(o.anchoring)
 
 For such data the plot() function provides a dose-response plot for each endpoint.
 
+### Handling of data with specific designs
+
+The DRomics workflow was first developed for data collected through a typical
+dose-response experiment, with a reasonable number tested doses (or concentrations - at least 4 in addition of the control and ideally 6 to 8)
+and a small number of replicates per dose. Recently we made some modifications in the package to make possible the use of designs with only 3 doses in addition of the control even if this type of design is not recommended for dose-response modeling.
+**We also extended our workflow to handle in situ (or observational) datasets**, 
+for which there is **no replicates as the dose (or concentration) is not controlled**
+(see the next subsection for an example and more information on the handling of such data).
+In the following, you will also find an example of **experimental data collected using a design with a batch effect** with an explanation of a simple way to use functions 
+from the Bioconductor package **sva** to correct for this batch effect and to use our PCAplot()
+function to visualize this batch effect and the impact of the batch effect correction on data.
+
+### An example with in situ (observational) RNAseq data
+
+One of the problem that may occur in particular with in situ data, is the absence of real
+control samples, corresponding to a strictly null exposure dose or concentration.
+To prevent an hazardous calculation of the BMD by extrapolation in such a case, 
+one should use the argument backgrounddose to define the maximal measured dose 
+that can be considered as a negligible dose. 
+All doses below  or equal to the value given in backgrounddose will be fixed at 0, 
+so as to be considered at the background level of exposition. 
+
+For in situ data (and more generally for data with a very large number samples),
+the use of the rlog transformation in RNAseqdata() is not recommended, both for speed
+and because you are more likely to encounter a problem with the rlog transformation in 
+case of outliers in such a case (see  [https://support.bioconductor.org/p/105334/](https://support.bioconductor.org/p/105334/)
+for an explanation of the author of **DESeq2** and just force the transfo.method to 
+"rlog" in the following example to see an example of problems with outliers).
+
+```{r}
+datafilename <- system.file("extdata", "insitu_RNAseq_sample.txt", package="DRomics")
+# Importation of data specifying that observed doses below the background dose
+# fixed here to 2e-2 will be considered as null dose to have a control 
+(o.insitu <- RNAseqdata(datafilename, backgrounddose = 2e-2, transfo.method = "vst"))
+plot(o.insitu)
+```
+
+### An example of RNAseq data from an experiment with a batch effect
+
+When omics data are collected through a design with a known batch effect, 
+the DRomics function PCAplot() can be used as in the example below to visualize
+the impact of this batch effect on the data, and functions from specific
+packages can be used to correct for the batch effect as in the example below.
+We recommend the use of functions ComBat() and ComBat_seq() from the Bioconductor
+**sva** package for this purpose, respectively for microarray 
+(or other continuous omic data) and RNAseq data. Below is an example using 
+ComBat-seq() on RNAseq data with batch effect.
+
+```{r}
+# Load of data
+data(zebraf)
+str(zebraf)
+
+# Formating of data using the formatdata4DRomics() function
+data4DRomics <- formatdata4DRomics(signalmatrix = zebraf$counts, 
+                           dose = zebraf$dose)
+
+# Normalization and transformation of data 
+(o <- RNAseqdata(data4DRomics, transfo.method = "vst"))
+
+# PCA plot to visualize the batch effect
+PCAdataplot(o, batch = zebraf$batch)
+
+# Batch effect correction using ComBat_seq{sva}
+require(sva)
+BECcounts <- ComBat_seq(as.matrix(o$raw.counts), 
+                        batch = as.factor(zebraf$batch), 
+                        group = as.factor(o$dose)) 
+
+# Formating of data after batch effect correction
+BECdata4DRomics <- formatdata4DRomics(signalmatrix = BECcounts, 
+                                   dose = o$dose)
+(o.BEC <- RNAseqdata(BECdata4DRomics, transfo.method = "vst"))
+
+# PCA plot after batch effect correction
+PCAdataplot(o.BEC, batch = zebraf$batch)
+```
+
+
 ## Step 2: selection of significantly responding items
 
 For the second step of the workflow, function itemselect() must be used with the output of the function used in Step 1 as first argument (output of RNAseqdata(), microarraydata(), continuousomicdata() or continuousanchoringdata()). Below is an example with microarray data.
@@ -248,6 +330,8 @@ Concerning the method used for selection, we recommend the default choice ("quad
 per condition). It enables the selection of both monotonic and 
 biphasic dose-responses. If you want to focus on monotonic dose-responses, the "linear" method could be chosen. For a design with a small number of doses/concentrations and many replicates 
 (not an optimal for dose-response modelling), the "ANOVA" method could be preferable.
+For in situ data (observational data without replicates due to uncontrolled dose), only trend tests
+will be proposed as the use of an ANOVA test in absence of replicates for some conditions is not reasonable.
 
 See ?itemselect and Larras et al. 2018 for details.
 
